Fix for unneeded scrollbar.

--- a/src/ui/home/diff/diff.less
+++ b/src/ui/home/diff/diff.less
@@ -16,7 +16,6 @@
 }
 
 .Diff .margin {
-  padding-top: 3px;
   width: 47px;
   height: 100%;
   background-color: #232323;
@@ -30,6 +29,10 @@
   padding-right: 13px;
   color: #e2e2e2;
   background-color: #232323;
+}
+
+.Diff .line0 {
+  padding-top: 3px;
 }
 
 .Diff .codeArea {
